--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -13,6 +13,11 @@
     transition: background $speed;
 }
 
+// Variables
+$darkblue: #001e5a;
+$darkerblue: #001848;
+$anotherblue: #001748;
+
 body {
 	margin: 0;
 	padding: 0;
@@ -22,9 +27,6 @@ body {
     background: url("../images/top-gradient.png") left top repeat-x #ececec;
     font-size: small;
 }
-
-// Variables
-$darkblue: #001e5a;
 
 a {
 
@@ -188,7 +190,7 @@ h1 a {
     top: 100px;
     left: 0;
     width: 960px;
-    background-color: #001848;
+    background-color: $darkerblue;
     z-index: 10;
 }
 
@@ -260,7 +262,7 @@ h1 a {
 }
 
 .main-nav ul ul li a {
-    background-color: #001848;
+    background-color: $darkerblue;
     font-size: 12px;
     padding: 8px 16px;
     height: auto;
@@ -268,7 +270,7 @@ h1 a {
 }
 
 .main-nav ul ul li a.has-child {
-    background: url("../images/child.png") center right no-repeat #001848;
+    background: url("../images/child.png") center right no-repeat $darkerblue;
 }
 
 .main-nav ul ul li.hover a,
@@ -298,7 +300,7 @@ h1 a {
 
 .main-nav ul ul ul li.hover a,
 .main-nav ul ul ul li a:hover {
-    color: #001848;
+    color: $darkerblue;
 }
 
 
@@ -361,7 +363,7 @@ h1 a {
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
-    background-color: #001848;
+    background-color: $darkerblue;
 
     color: #ffffff;
     background: -moz-linear-gradient(
@@ -550,6 +552,9 @@ h1 a {
     /*box-shadow: 0 8px 6px -6px #ccc;*/
 
     &:after {
+        content: "";
+        display: table;
+        clear: both;
     }
 
     h2 {
@@ -570,70 +575,77 @@ h1 a {
     width: 226px;
     float: left;
     margin-left: 20px;
-}
 
-.sidebox  {
-    margin-bottom: 20px;
-    background-color: #fff;
+    .sidebox  {
+        margin-bottom: 20px;
+        background-color: #fff;
 
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
+        &:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        h3 {
+            color: #fff;
+            background: $anotherblue;
+            padding: 8px 10px;
+            font-size: 15px;
+        }
+
+        a {
+            display: block;
+        }
+
+        .responsive {
+            width: 100%;
+        }
+
+        &.news {
+
+            ul {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+
+                li {
+                    padding: 8px 12px;
+                    background-color: #fff;
+
+                    h4 {
+                        font-size: 12px;
+                        line-height: 17px;
+                    }
+
+                    a {
+                        color: #217cc9;
+                        display: inline;
+                        text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
+
+                        &:hover {
+                            text-decoration: none;
+                        }
+                    }
+
+                    &.even {
+                        background-color: #dedede;
+                    }
+
+                }
+            }
+        }
+
+        &.video {
+            background-color: #000;
+
+            iframe {
+                display: block;
+            }
+        }
     }
 }
 
-.sidebox h3 {
-    color: #fff;
-    background: #001748;
-    padding: 8px 10px;
-    font-size: 15px;
-}
 
-.sidebox a {
-    display: block;
-}
-
-.sidebox > img {
-    width: 100%;
-}
-
-.sidebox.news ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.sidebox.news ul li {
-    padding: 8px 12px;
-    background-color: #fff;
-}
-
-.sidebox.news ul li h4 {
-    font-size: 12px;
-    line-height: 17px;
-}
-
-.sidebox.news ul li a {
-    color: #217cc9;
-    display: inline;
-    text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
-}
-
-.sidebox.news ul li a:hover {
-    text-decoration: none;
-}
-
-.sidebox.news ul li.even {
-    background-color: #dedede;
-}
-
-.sidebox.video {
-    background-color: #000;
-}
-.sidebox.video iframe {
-    display: block;
-}
 
 
 
@@ -642,7 +654,7 @@ h1 a {
 /* homepage hero heading */
 /* ================================================ */
 .main-heading {
-    color: #001748;
+    color: $anotherblue;
     padding: 5px 10px 8px 12px;
 }
 
@@ -697,36 +709,44 @@ h1 a {
     padding: 0;
 }
 
-.carousel .copy {
-    padding: 10px;
-    background-color: #fff;
-    position: relative;
+.carousel {
+    .copy {
+        padding: 10px;
+        background-color: #fff;
+        position: relative;
+
+        p {
+            padding-right: 90px;
+            padding-bottom: 5px;
+            color: #4b4b4a;
+            font-weight: bold;
+
+        }
+
+        h2 {
+            margin: 0;
+            padding: 0 90px 5px 0;
+            color: #000;
+            font-size: 25px;
+
+        }
+
+        &:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        .big-link {
+            position: absolute;
+            right: 10px;
+            top: 12px;
+        }
+
+    }
 }
 
-.carousel .copy:after {
-    content: "";
-    display: table;
-    clear: both;
-}
 
-.carousel .copy h2 {
-    margin: 0;
-    padding: 0 90px 5px 0;
-    color: #000;
-    font-size: 25px;
-}
-.carousel .copy p {
-    padding-right: 90px;
-    padding-bottom: 5px;
-    color: #4b4b4a;
-    font-weight: bold;
-}
-
-.carousel .copy .big-link {
-    position: absolute;
-    right: 10px;
-    top: 12px;
-}
 
 .mobile {
     .carousel .copy .big-link {
@@ -864,41 +884,49 @@ h1 a {
 
 /* configure widget */
 /* ================================================ */
-.mainbox.configure {
-    background: url("../images/logo-on-white.png") 12px 12px no-repeat #fff;
-    min-height: 65px;
-    padding: 12px 0 12px 100px;
-    position: relative;
-    float: none;
-    width: inherit;
-}
-
-.mainbox.configure h2,
-.mainbox.configure p {
-    padding-right: 200px;
-}
-
-.mainbox.configure .big-link {
-    position: absolute;
-    right: 15px;
-    top: 15px;
-}
-
-
-.sidebox.configure {
-    p {
-      padding: 10px;
-    }
-
+.mainbox {
     &.configure {
+        background: url("../images/logo-on-white.png") 12px 12px no-repeat #fff;
+        min-height: 65px;
+        padding: 12px 0 12px 100px;
+        position: relative;
+        float: none;
+        width: inherit;
 
-        .more {
-            background-color: #dcdcdc;
-            padding: 7px 10px;
-            min-height: 35px;
+        .copy-block {
+            min-height: inherit;
+            padding: 0 200px 0 0;
+            border: none;
+        }
+
+        .big-link {
+            position: absolute;
+            right: 15px;
+            top: 15px;
         }
     }
 }
+
+
+.sidebox {
+    &.configure {
+        p {
+            padding: 10px;
+        }
+
+        &.configure {
+
+            .more {
+                background-color: #dcdcdc;
+                padding: 7px 10px;
+                min-height: 35px;
+            }
+        }
+    }
+}
+
+
+
 
 .breadcrumb {
     width: 960px;
@@ -992,7 +1020,7 @@ h1 a {
 
 
 .news-page-navigation ul li a:hover {
-    background-color: #001848;
+    background-color: $darkerblue;
     color: #fff;
 }
 
@@ -1001,7 +1029,7 @@ h1 a {
     background-color: #eaeaea;
 
     &:hover {
-        background-color: #001848;
+        background-color: $darkerblue;
         color: #fff;
     }
 }
@@ -1099,7 +1127,7 @@ h1 a {
     }
     img {
         &.responsive {
-            margin-bottom: 15px;
+            margin: 10px;
         }
         &.float-left {
             float: left;
@@ -1128,7 +1156,7 @@ h1 a {
 
         h2 {
             font-size: 18px;
-            color: #001748;
+            color: $anotherblue;
             margin: 0 0 10px 0;
             padding: 0 0 5px 0;
             border-bottom: solid 1px #ccc;
@@ -1162,7 +1190,7 @@ h1 a {
 .gallery {
     h2 {
         font-size: 18px;
-        color: #001748;
+        color: $anotherblue;
         margin: 0 0 10px 0;
         padding: 0 0 5px 0;
         border-bottom: solid 1px #ccc;
@@ -1752,7 +1780,7 @@ h1 a {
 
             h3 {
                 color: #fff000;
-                background: #001748;
+                background: $anotherblue;
                 padding: 8px 10px 8px 20px;
                 font-size: 15px;
             }
@@ -1934,7 +1962,7 @@ h1 a {
 /* footer */
 /* ================================================ */
 .footer {
-    background-color: #001848;
+    background-color: $darkerblue;
     margin-bottom: 20px;
     font-size: 0.85em;
     color: #ccc;
@@ -2230,32 +2258,62 @@ h1 a {
     }
 
     .sidebar {
-        margin-top: 10px;
+        margin-top: 5px;
         width: 100%;
         float: none;
         margin-left: 0;
-    }
 
-    .sidebox-3 .sidebox {
-        float: left;
-        width: 33.33%;
-    }
+        &.sidebox-3 .sidebox {
+            float: left;
+            width: 33.33%;
+        }
 
-    .sidebox-2 .sidebox {
-         float: left;
-         width: 50%;
+        &.sidebox-2 .sidebox {
+            float: left;
+            width: 50%;
 
-         &.configure {
-              position: relative;
+//            &.configure {
+//                position: relative;
+//
+//                .more {
+//                    position: absolute;
+//                    bottom: 0;
+//                    left: 0;
+//                    width: 100%;
+//                    box-sizing: border-box;
+//                }
+//            }
+        }
 
-              .more {
-                  position: absolute;
-                  bottom: 0;
-                  left: 0;
-                  width: 100%;
-                  box-sizing: border-box;
-              }
-         }
+        .sidebox {
+            &.news {
+                clear: left;
+                float: none;
+                width: 100%;
+
+                ul {
+                    li {
+                        h4 {
+                            font-size: 1.1em;
+                            line-height: 140%;
+                        }
+                    }
+                }
+            }
+        }
+
+
+        .sidebox {
+            &.gallery {
+                ul {
+                    padding: 8px 0 0 8px;
+
+                    li {
+                        padding: 0 8px 8px 0;
+                    }
+                }
+            }
+        }
     }
 
     .news-page-navigation ul li a {
@@ -2266,12 +2324,6 @@ h1 a {
           -webkit-border-radius: 3px;
           -moz-border-radius: 3px;
           border-radius: 3px;
-    }
-
-    .sidebox.news {
-        clear: left;
-        float: none;
-        width: 100%;
     }
 
     .mainbox .minibox {
@@ -2297,21 +2349,29 @@ h1 a {
         width: 50%;
     }
 
-    .sidebox.news ul li h4 {
-        font-size: 1.1em;
-        line-height: 140%;
+
+    .main-heading {
+        &.hero {
+            height: auto;
+
+            h2 {
+                padding: 8px 15px 5px 15px;
+                font-size: 22px;
+            }
+
+            p {
+                padding: 0 15px 15px 15px;
+                font-size: 16px;
+            }
+        }
     }
 
-    .main-heading.hero {
-        height: auto;
-    }
 
     .news-page-navigation.bottom {
         ul {
             display: block;
         }
     }
-
 
 
     .container {
@@ -2340,7 +2400,7 @@ h1 a {
 
                 h3 {
                     color: #fff000;
-                    background: #001748;
+                    background: $anotherblue;
                     padding: 8px 10px;
                     font-size: 15px;
                 }
@@ -2386,19 +2446,6 @@ h1 a {
             }
         }
     }
-
-
-    .sidebox {
-        &.gallery {
-            ul {
-                padding: 8px 0 0 8px;
-
-                li {
-                    padding: 0 8px 8px 0;
-                }
-            }
-        }
-    }
 }
 
 
@@ -2436,49 +2483,51 @@ h1 a {
         font-size: 3.5em;
     }
 
+    .sidebar {
+        &.sidebox-3,
+        &.sidebox-2 {
+            .sidebox {
+                width: 50%;
 
-    .sidebox-3 .sidebox {
-        width: 50%;
-    }
-
-    .sidebox-2 .sidebox {
-        width: 50%;
-    }
-
-    .sidebox-3 .sidebox.news,
-    .sidebox-2 .sidebox.news {
-        width: 100%;
+                &.news {
+                    width: 100%;
+                }
+            }
+        }
     }
 
     .main-heading {
         padding: 8px 12px;
     }
 
-    .mainbox.configure {
-        background: url("../images/logo-on-white.png") 12px 12px no-repeat #fff;
-        min-height: 65px;
-        padding: 10px 20px 20px 100px;
-        position: relative;
+    .mainbox {
+        &.configure {
+            padding: 10px 15px 15px 100px;
+            text-align: right;
+
+            .copy-block {
+                min-height: inherit;
+                padding: 0;
+                border: none;
+                text-align: left;
+
+                h2 {
+                    line-height: 110%;
+                    padding-bottom: 5px;
+
+                }
+
+                p {
+                    padding-bottom: 10px;
+                }
+            }
+
+            .big-link {
+                position: static;
+            }
+        }
     }
 
-    .mainbox.configure h2,
-    .mainbox.configure p {
-        padding-right: 0;
-    }
-
-    .mainbox.configure h2 {
-        line-height: 110%;
-        padding-bottom: 5px;
-    }
-
-    .mainbox.configure p {
-        padding-bottom: 10px;
-    }
-
-    .mainbox.configure .big-link {
-        position: static;
-        float: right;
-    }
 
     .mainbox .minibox {
         float: left;
@@ -2546,6 +2595,14 @@ h1 a {
     .mainbox {
         &.padded {
             margin-top: 20px;
+        }
+    }
+
+    .carousel {
+        .copy {
+            h2 {
+                font-size: 16px;
+            }
         }
     }
 
@@ -2654,24 +2711,36 @@ h1 a {
         font-size: 2.5em;
     }
 
-    .sidebox-3 .sidebox,
-    .sidebox-2 .sidebox {
-        width: 100%;
-        float: none;
-    }
+    .sidebar {
+        &.sidebox-3,
+        &.sidebox-2 {
+            .sidebox {
+                width: 100%;
+                float: none;
 
-    .sidebox-2 .sidebox {
-
-      &.configure {
-        position: relative;
-
-        .more {
-          position: static;
-          width: 100%;
-          box-sizing: border-box;
+                &.news {
+                    width: 100%;
+                }
+            }
         }
-      }
+
+        .sidebox {
+
+            &.configure {
+                position: relative;
+
+                .more {
+                    position: static;
+                    width: 100%;
+                    box-sizing: border-box;
+                }
+            }
+        }
     }
+
+
+
+
 
     .carousel .copy h2,
     .mainbox h2 {
