--- a/css/marshall.css
+++ b/css/marshall.css
@@ -29,12 +29,27 @@ img {
   display: block;
 }
 
-textarea,
-input[type="text"],
-input[type="email"],
-input[type="password"],
-input[type="number"],
 select {
+  margin: 0 0 15px;
+  font-weight: bold;
+  width: 100%;
+  color: #001848;
+}
+
+.mobile input[type="text"],
+.mobile input[type="email"],
+.mobile input[type="password"],
+.mobile input[type="number"],
+.mobile select {
+  font-size: 1.1em;
+}
+
+.mobile textarea,
+.mobile input[type="text"],
+.mobile input[type="email"],
+.mobile input[type="password"],
+.mobile input[type="number"],
+.mobile select {
   border-radius: 4px;
   background-color: #fff;
   font-family: 'Tahoma', Helvetica, Arial, sans-serif;
@@ -47,21 +62,11 @@ select {
   resize: none;
   font-size: 1.0em;
 }
-
-.mobile input[type="text"],
-.mobile input[type="email"],
-.mobile input[type="password"],
-.mobile input[type="number"],
 .mobile select {
-  font-size: 1.1em;
-}
-
-select {
   background: url("../images/bg-select-schveron.jpg") center right no-repeat white;
   padding: 5px 30px 5px 7px;
 }
-
-.error select {
+.mobile .error select {
   background: url("../images/bg-select-schveron-error.jpg") center right no-repeat white;
 }
 
@@ -444,10 +449,13 @@ h1 a {
 /* main */
 /* ================================================ */
 .main {
-  margin-top: 30px;
+  margin-top: 5px;
   margin-right: -246px;
   width: 100%;
   float: left;
+}
+.main.homepage {
+  margin-top: 30px;
 }
 
 .content.full-width .main {
@@ -947,9 +955,9 @@ h1 a {
   float: right;
 }
 .content-detail img.shadow {
-  -webkit-box-shadow: 0px 6px 5px -2px #575657;
-  -moz-box-shadow: 0px 6px 5px -2px #575657;
-  box-shadow: 0px 6px 5px -2px #575657;
+  -webkit-box-shadow: 0px 6px 5px -3px #575657;
+  -moz-box-shadow: 0px 6px 5px -3px #575657;
+  box-shadow: 0px 6px 5px -3px #575657;
 }
 .content-detail img.set-of-two {
   width: 45% !important;
@@ -1006,6 +1014,121 @@ h1 a {
   width: 70px;
   height: 55px;
   margin: 5px;
+}
+
+/* Spares styles */
+/* ================================================ */
+.filters {
+  float: left;
+  margin: 0 -10px 0 -10px;
+  padding: 0;
+  list-style: none;
+}
+.filters li {
+  width: 176px;
+  margin: 0 10px 20px 10px;
+  float: left;
+  height: 375px;
+  background-color: #fff;
+}
+.filters li h3 {
+  color: #FFF;
+  margin: 0;
+  padding-left: 45px;
+  line-height: 37px;
+  font-size: 19px;
+  height: 34px;
+  background: #d4d4d4 url("../images/filter-pre.png") 0 0 no-repeat;
+}
+.filters li h4 {
+  margin: 0 0 10px;
+  font-size: 13px;
+  border-bottom: 1px solid #FFF;
+  padding-bottom: 5px;
+  color: #001848;
+}
+.filters li fieldset {
+  border: 0;
+  padding: 10px;
+  margin: 0;
+}
+.filters li.selected h3 {
+  background-color: #01205a;
+}
+.filters li.first-child {
+  background-color: #d4d4d4;
+}
+.filters li p {
+  float: left;
+  padding-bottom: 17px;
+  width: 100%;
+}
+.filters li p label {
+  font-size: 12px;
+  font-weight: bold;
+  color: #001848;
+  float: left;
+  margin-top: 6px;
+  padding: 0;
+}
+.filters li p input {
+  padding: 3px;
+  border: 0;
+  float: right;
+}
+.filters li #part_no {
+  max-width: 92px;
+}
+.filters li #keyword {
+  max-width: 85px;
+}
+.filters li .print-hide {
+  padding-bottom: 0;
+}
+.filters li .print-hide input {
+  background: url("../images/btn-bgs.png") no-repeat;
+  padding: 9px 13px 9px;
+  display: block;
+  color: #FFF000;
+  margin: 0;
+  font-family: Arial;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 15px;
+  border: 0;
+  text-align: left;
+  height: 35px;
+  background-position: 0 bottom;
+  width: 100px;
+  max-width: 100px;
+}
+.filters li .filterList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  float: none;
+}
+.filters li .filterList li {
+  width: auto;
+  height: inherit;
+  background: transparent;
+  margin: 0;
+  float: none;
+}
+.filters li .filterList li a {
+  text-decoration: none;
+  padding: 5px 12px;
+  line-height: 14px;
+  display: block;
+  font-weight: bold;
+  font-size: 13px;
+  color: #444;
+  background: #d4d4d4;
+  border-top: 1px solid #fff;
+}
+.filters li .filterList li a:hover {
+  background: #888;
+  color: #EEE;
 }
 
 /* Price & Configure styles */
@@ -1777,7 +1900,7 @@ h1 a {
   top: 0;
   right: 0;
   width: 38px;
-  margin-top: 153px;
+  margin-top: 176px;
   border: 2px solid #bb1f1d;
   color: #444;
   -webkit-appearance: none;
@@ -2351,6 +2474,7 @@ h1 a {
   /* news detail */
   .content-detail img.responsive {
     width: 100% !important;
+    margin: 15px 0;
   }
   .content-detail img.float-left {
     float: none;
