--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -56,24 +56,20 @@ img {
     display: block;
 }
 
-textarea,
-input[type="text"],
-input[type="email"],
-input[type="password"],
-input[type="number"],
 select {
-    border-radius: 4px;
-    background-color: #fff;
-    font-family: 'Tahoma', Helvetica, Arial, sans-serif;
-    padding: 6px 10px;
-    border: 1px solid #ccc;
-    -webkit-appearance: none;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    resize: none;
-    font-size: 1.0em;
+    margin: 0 0 15px;
+    font-weight: bold;
+    width: 100%;
+    color: #001848;
 }
+
+
+
+
+
+
+
+
 
 .mobile input[type="text"],
 .mobile input[type="email"],
@@ -83,14 +79,40 @@ select {
     font-size: 1.1em;
 }
 
-select {
-    background: url("../images/bg-select-schveron.jpg") center right no-repeat #fff;
-    padding: 5px 30px 5px 7px;
+.mobile {
+
+
+    textarea,
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    input[type="number"],
+    select {
+        border-radius: 4px;
+        background-color: #fff;
+        font-family: 'Tahoma', Helvetica, Arial, sans-serif;
+        padding: 6px 10px;
+        border: 1px solid #ccc;
+        -webkit-appearance: none;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        resize: none;
+        font-size: 1.0em;
+    }
+
+
+
+    select {
+        background: url("../images/bg-select-schveron.jpg") center right no-repeat #fff;
+        padding: 5px 30px 5px 7px;
+    }
+
+    .error select {
+        background: url("../images/bg-select-schveron-error.jpg") center right no-repeat #fff;
+    }
 }
 
-.error select {
-    background: url("../images/bg-select-schveron-error.jpg") center right no-repeat #fff;
-}
 
 * { outline: none; }
 
@@ -518,10 +540,14 @@ h1 a {
 /* main */
 /* ================================================ */
 .main {
-    margin-top: 30px;
+    margin-top: 5px;
     margin-right: -246px;
     width: 100%;
     float: left;
+
+    &.homepage {
+        margin-top: 30px;
+    }
 }
 
 .content.full-width .main {
@@ -1136,9 +1162,9 @@ h1 a {
             float: right;
         }
         &.shadow {
-            -webkit-box-shadow: 0px 6px 5px -2px rgba(87,86,87,1);
-            -moz-box-shadow: 0px 6px 5px -2px rgba(87,86,87,1);
-            box-shadow: 0px 6px 5px -2px rgba(87,86,87,1);
+            -webkit-box-shadow: 0px 6px 5px -3px rgba(87,86,87,1);
+            -moz-box-shadow: 0px 6px 5px -3px rgba(87,86,87,1);
+            box-shadow: 0px 6px 5px -3px rgba(87,86,87,1);
         }
         &.set-of-two {
             width: 45% !important;
@@ -1214,6 +1240,146 @@ h1 a {
 
 
 
+
+/* Spares styles */
+/* ================================================ */
+.filters {
+    float: left;
+    margin: 0 -10px 0 -10px;
+    padding: 0;
+    list-style: none;
+
+    li {
+        width: 176px;
+        margin: 0 10px 20px 10px;
+        float: left;
+        height: 375px;
+        background-color: #fff;
+
+        h3 {
+            color: #FFF;
+            margin: 0;
+            padding-left: 45px;
+            line-height: 37px;
+            font-size: 19px;
+            height: 34px;
+            background: #d4d4d4 url('../images/filter-pre.png') 0 0 no-repeat;
+        }
+
+        h4 {
+            margin: 0 0 10px;
+            font-size: 13px;
+            border-bottom: 1px solid #FFF;
+            padding-bottom: 5px;
+            color: #001848;
+        }
+
+        fieldset {
+            border: 0;
+            padding: 10px;
+            margin: 0;
+        }
+
+        &.selected {
+
+            h3 {
+                background-color: #01205a;
+            }
+        }
+
+        &.first-child {
+            background-color: #d4d4d4;
+
+        }
+
+        p {
+            float: left;
+            padding-bottom: 17px;
+            width: 100%;
+
+
+            label {
+                font-size: 12px;
+                font-weight: bold;
+                color: #001848;
+                float: left;
+                margin-top: 6px;
+                padding: 0;
+            }
+
+            input {
+                padding: 3px;
+                border: 0;
+                float: right;
+            }
+        }
+
+        #part_no {
+            max-width: 92px;
+        }
+
+        #keyword {
+            max-width: 85px;
+        }
+
+        .print-hide {
+            padding-bottom: 0;
+
+            input {
+                background: url('../images/btn-bgs.png') no-repeat;
+                padding: 9px 13px 9px;
+                display: block;
+                color: #FFF000;
+                margin: 0;
+                font-family: Arial;
+                font-weight: bold;
+                font-size: 13px;
+                line-height: 15px;
+                border: 0;
+                text-align: left;
+                height: 35px;
+                background-position: 0 bottom;
+                width: 100px;
+                max-width: 100px;
+
+            }
+        }
+
+        .filterList {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            float: none;
+
+            li {
+                width: auto;
+                height: inherit;
+                background: transparent;
+                margin: 0;
+                float: none;
+
+                a {
+                    text-decoration: none;
+                    padding: 5px 12px;
+                    line-height: 14px;
+                    display: block;
+                    font-weight: bold;
+                    font-size: 13px;
+                    color: #444;
+                    background: #d4d4d4;
+                    border-top: 1px solid #fff;
+
+                    &:hover {
+                        background: #888;
+                        color: #EEE;
+                    }
+                }
+            }
+        }
+
+
+    }
+}
 
 
 
@@ -2100,7 +2266,7 @@ h1 a {
     top: 0;
     right: 0;
     width: 38px;
-    margin-top: 153px;
+    margin-top: 176px;
     border: 2px solid #bb1f1d;
     color: #444;
     -webkit-appearance: none;
@@ -2814,6 +2980,7 @@ h1 a {
         img {
             &.responsive {
                 width: 100% !important;
+                margin: 15px 0;
             }
             &.float-left {
                 float: none;
